[package]
name = "PhotoReader"
version = "0.1.0"
authors = ["Fabio Masini <fabio@rapidosoft.it>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.67", features = ["HtmlInputElement", "FileList", "File", "FileReader", "ProgressEvent"] }
js-sys = "0.3.67"
image = "0.24.8"
base64 = "0.21.7"
kamadak-exif = "0.5.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
