[package]
name = "photo_reader"
version = "0.1.0"
authors = ["Fabio Masini <fabio@rapidosoft.it>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.78"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.67", features = ["HtmlInputElement", "FileList", "File", "FileReader", "ProgressEvent", "BlobPropertyBag"] }
js-sys = "0.3.67"
image = "0.24.8"
kamadak-exif = "0.5.5"
wasm-bindgen-futures = "0.4.41"

[dev-dependencies]
wasm-bindgen-test = "0.3.40"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
